integrated mail chimp for home page subscription sign up

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,9 @@
 
         <section class="container form">
             <!-- How to send form to email sourced from https://blog.hubspot.com/marketing/html-form-email -->
-            <form method="POST" name="contact-form" action="https://www.formbackend.com/f/e053dfad74a9826e" class="needs-validation" novalidate>
+            <form method="POST" name="contact-form"
+                action="https://gmail.us1.list-manage.com/subscribe/post?u=4be784f130875c2a4eee67c32&amp;id=632a602b72"
+                class="needs-validation" novalidate>
                 <div class="col-12 mb-3">
                     <label for="name" class="form-label">Name*</label>
                     <input type="name" class="form-control" id="name" name="sender" required>
@@ -83,15 +85,16 @@
                 </div>
                 <div class="col-12 mb-3">
                     <label for="message" class="form-label">Your message*</label>
-                    <textarea class="form-control" id="message" style="height: 100px" name="message" required></textarea>
+                    <textarea class="form-control" id="message" style="height: 100px" name="message"
+                        required></textarea>
                     <div class="invalid-feedback">
                         Please include a short message.
                     </div>
                 </div>
                 <div class="input-group mb-5">
                     <span class="input-group-text" id="basic-addon1">@</span>
-                    <input type="text" class="form-control" id="social" placeholder="Social Media" name="social" aria-label="Username"
-                        aria-describedby="basic-addon1">
+                    <input type="text" class="form-control" id="social" placeholder="Social Media" name="social"
+                        aria-label="Username" aria-describedby="basic-addon1">
                 </div>
                 <div class="col-12 d-flex justify-content-center">
                     <button type="submit" class="btn btn-general">Send</button>
