--- a/index.html
+++ b/index.html
@@ -140,14 +140,29 @@
     </section>
 
     <!-- Email Sub Section -->
-    <section class="container-fluid d-flex justify-content-center">
-        <div class="row emailsub-container">
+    <section class="container-fluid d-flex justify-content-center emailsub-container">
+        <div id="mc_embed_signup row">
             <h2 class="col-12 emailsub-header">Subscribe for updates!</h2>
-            <div class="col-12 emailsub-input">
-                <input type="email" class="form-control" placeholder="Email Address">
-            </div>
-            <div class="col-12 d-flex justify-content-center">
-                <button type="submit" name="submit" class="btn btn-general">Subscribe</button>
+            <div class="row">
+                <div class="col-12">
+                    <form
+                        action="https://gmail.us1.list-manage.com/subscribe/post?u=4be784f130875c2a4eee67c32&amp;id=632a602b72"
+                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate needs-validation"
+                        target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <input type="email" value="" class="form-control" name="EMAIL" id="mce-EMAIL"
+                                placeholder="Email Address" required>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                    name="b_4be784f130875c2a4eee67c32_632a602b72" tabindex="-1" value="">
+                            </div>
+                            <div class="clear">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                                    class="btn btn-general btn-subscribe">
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
@@ -178,13 +193,7 @@
                 </div>
             </div>
         </div>
-
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
-
 </body>
 
 </html>
