--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,10 @@
                                 <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
                             </ul>
                         </div>
-
-
                     </div>
                 </div>
             </nav>
         </header>
-
         <!-- Banner Section -->
         <section class="container-fluid g-0">
             <div class="banner-image-contact">
@@ -61,17 +58,14 @@
                 </div>
             </div>
         </section>
-
         <!-- Contact Form -->
-
         <section class="container form">
-            <!-- How to send form to email sourced from https://blog.hubspot.com/marketing/html-form-email -->
-            <form method="POST" name="contact-form"
-                action="https://gmail.us1.list-manage.com/subscribe/post?u=4be784f130875c2a4eee67c32&amp;id=632a602b72"
+            <h2 class="d-none">Contact</h2>
+            <form method="POST" name="contact-form" action="https://www.formbackend.com/f/e053dfad74a9826e"
                 class="needs-validation" novalidate>
                 <div class="col-12 mb-3">
                     <label for="name" class="form-label">Name*</label>
-                    <input type="name" class="form-control" id="name" name="sender" required>
+                    <input type="text" class="form-control" id="name" name="sender" required>
                     <div class="invalid-feedback">
                         Please include your name.
                     </div>
@@ -102,7 +96,6 @@
             </form>
         </section>
     </div>
-
     <footer class="container-fluid">
         <div class="row footer-section">
             <div class="col">
@@ -129,13 +122,10 @@
                 </div>
             </div>
         </div>
-
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-
     <script>
         // Form Validation sourced: https://getbootstrap.com/docs/5.0/forms/validation/
         (function () {
@@ -153,8 +143,6 @@
                 })
         })()
     </script>
-
-
 </body>
 
 </html>
