--- a/index.html
+++ b/index.html
@@ -45,13 +45,10 @@
                             <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
                         </ul>
                     </div>
-
-
                 </div>
             </div>
         </nav>
     </header>
-
     <!-- Hero Section -->
     <section class="container-fluid g-0">
         <div class="opacity-container">
@@ -61,9 +58,9 @@
             </div>
         </div>
     </section>
-
     <!-- Profile Image & Bio -->
     <section class="container-fluid d-flex justify-content-center">
+        <h2 class="d-none">Our Story</h2>
         <div class="row biosection">
             <div class="col-12 col-lg-4">
                 <!-- Profile Image -->
@@ -85,7 +82,6 @@
             </div>
         </div>
     </section>
-
     <!-- Featured & Recent Articles -->
     <!-- Cards sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/card/) -->
     <section class="container-fluid bg-article d-flex justify-content-center">
@@ -138,17 +134,16 @@
             </div>
         </div>
     </section>
-
     <!-- Email Sub Section -->
     <section class="container-fluid d-flex justify-content-center emailsub-container">
-        <div id="mc_embed_signup row">
+        <div id="mc_embed_signup" class="row">
             <h2 class="col-12 emailsub-header">Subscribe for updates!</h2>
             <div class="row">
                 <div class="col-12">
                     <form
                         action="https://gmail.us1.list-manage.com/subscribe/post?u=4be784f130875c2a4eee67c32&amp;id=632a602b72"
-                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate needs-validation"
-                        target="_blank" novalidate>
+                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                        class="validate needs-validation" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
                             <input type="email" value="" class="form-control" name="EMAIL" id="mce-EMAIL"
                                 placeholder="Email Address" required>
@@ -166,7 +161,6 @@
             </div>
         </div>
     </section>
-
     <footer class="container-fluid">
         <div class="row footer-section">
             <div class="col">
@@ -194,6 +188,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
