--- a/ourstory.html
+++ b/ourstory.html
@@ -46,20 +46,13 @@
                                 <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
                             </ul>
                         </div>
-
-
                     </div>
                 </div>
             </nav>
         </header>
-
-        <!-- Banner Section -->
-        <!-- <section class="container-fluid g-0">
-        <div class="banner-image-our-story"></div>
-    </section> -->
-
         <!-- Our Story Section -->
         <section class="container-fluid d-flex justify-content-center">
+            <h2 class="d-none">Our Story</h2>
             <div class="row biosection">
                 <div class="col-12">
                     <!-- Profile Image -->
@@ -102,7 +95,6 @@
             </div>
         </section>
     </div>
-
     <footer class="container-fluid">
         <div class="row footer-section">
             <div class="col">
@@ -129,13 +121,10 @@
                 </div>
             </div>
         </div>
-
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
