--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/25e90f9c24.js" crossorigin="anonymous"></script>
+    <link href="assets/images/favicon.png" rel="icon" type="image/png">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>The Freedom Project | An Irish Vanlife Story</title>
+    <title>The Freedom Project | An Irish Vanlife Blog</title>
 </head>
 
 <body>
@@ -54,7 +55,7 @@
         <div class="opacity-container">
             <div class="hero-image-home"></div>
             <div class="hero-text">
-                <h1 class="hero-heading">An Irish Vanlife Story</h1>
+                <h1 class="hero-heading">An Irish Vanlife Blog</h1>
             </div>
         </div>
     </section>
