added featured article

--- a/ourstory.html
+++ b/ourstory.html
@@ -76,7 +76,7 @@
                             need to be happy.
                             <br><br>
                             So why the blog? With the size of the vanlife community worldwide, there is no shortage of
-                            resources out there for people looking to take on their own conversions or to get a glimpse
+                            resources available for people looking to take on their own conversions or to get a glimpse
                             of
                             what living and travelling full-time in a van is really like. When doing my own research, I
                             found there to be far less information out there from an Irish perspective. Getting a van on
