--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <div class="card-body">
                         <h5 class="card-title">5 Steps To Get Your Van Road Ready</h5>
                         <p class="card-text">Getting a self converted van on the road in Ireland can be suprisingly
-                            tricky. Here I have a handy step by step guide on how to get your home on wheels registered,
-                            taxed, insured, and ready for the open road.</p>
-                        <a href="diycamperconversion.html" class="btn btn-general">Check it out</a>
+                            tricky. Here I have a handy step by step guide on how to get your home on wheels inspected,
+                            registered, insured, and ready for the open road.</p>
+                        <a href="get-your-van-road-ready.html" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
             </div>
