added first blog card to diy conversion page

--- a/diycamperconversion.html
+++ b/diycamperconversion.html
@@ -59,14 +59,26 @@
                 </div>
             </div>
         </section>
-        <!-- Coming Soon -->
-        <section class="container-fluid d-flex justify-content-center">
-            <div class="row  coming-soon">
-                <div class="col-12">
-                    <h1 class="coming-soon-heading">Coming Soon</h1>
-                    <p class="coming-soon-text">Thanks for showing interest in what my blog has to offer. I am currently
-                        working
-                        on a detailed overview of my van conversion, check back soon!</p>
+        <!-- Blog Articles -->
+        <section class="container">
+            <div class="row list-snippet-container">
+                <div class="col-12 d-flex justify-content-center snippet-container">
+                    <div class="row">
+                        <div class="col-12 col-md-4 g-0 snippet-img-container">
+                            <!-- .snippet-img-container: sets img height across screen sizes. Removes need to repeat thumbnail img class for different screen sizes. Important as many thumbnail imgs will be present on this page as site grows -->
+                            <div class="card-img-left-1 snippet-card-img"></div>
+                            <!-- .snippet-card-img: sets border radius for img 1024 px + -->
+                        </div>
+                        <div class="col-12 col-md-8 snippet-card-body">
+                            <h5 class="snippet-card-title">5 Steps To Get Your Van Road Ready</h5>
+                            <p class="snippet-card-text">Getting a self converted van on the road in Ireland can be
+                                suprisingly
+                                tricky. Here I have a handy step by step guide on how to get your home on wheels
+                                inspected,
+                                registered, insured, and ready for the open road.</p>
+                            <a href="get-your-van-road-ready.html" class="btn btn-snippet">Check it out</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
