made social links live, added nav button to bottom of article

--- a/get-your-van-road-ready.html
+++ b/get-your-van-road-ready.html
@@ -43,8 +43,10 @@
                         </div>
                         <div class="d-md-none d-lg-block">
                             <ul class="nav-social">
-                                <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
-                                <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
+                                <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
+                                        target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
+                                        target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -60,7 +62,6 @@
             </div>
         </section>
         <!-- Blog Post -->
-
         <article class="container bp-container">
             <div class="blog-post">
                 <h1 class="bp-title">5 Steps To Get Your Van Road Ready</h1>
@@ -186,7 +187,10 @@
                 </p>
             </div>
         </article>
-
+        <!-- Read More Button -->
+        <section class="container read-on d-flex justify-content-center">
+            <a href="diycamperconversion.html" class="btn btn-read-on">See more on DIY conversions <i class="fas fa-arrow-circle-right"></i></a>
+        </section>
     </div>
     <footer class="container-fluid">
         <div class="row footer-section">
@@ -208,8 +212,10 @@
                 <span class="linebreak">&nbsp;</span>
                 <div>
                     <ul class="social-footer">
-                        <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
-                        <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
+                        <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
+                                target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                        <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
+                                target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
                     </ul>
                 </div>
             </div>
