--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
                     </div>
                     <div class="d-md-none d-lg-block">
                         <ul class="nav-social">
-                            <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
-                            <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
+                            <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
+                                    target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                            <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
+                                    target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -183,8 +185,10 @@
                 <span class="linebreak">&nbsp;</span>
                 <div>
                     <ul class="social-footer">
-                        <li class="bg-social-icon"><i class="fab fa-instagram bold social-icon"></i></li>
-                        <li class="bg-social-icon"><i class="fab fa-tiktok social-icon"></i></li>
+                        <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
+                                target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                        <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
+                                target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
                     </ul>
                 </div>
             </div>
