--- a/ourstory.html
+++ b/ourstory.html
@@ -53,6 +53,16 @@
                 </div>
             </nav>
         </header>
+        <!-- Breadcrumb-->
+        <section class="container breadcrumb-container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a class="breadcrumb-link" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="breadcrumb-link breadcrumb-live"
+                            href="ourstory.html">Our Story</a></li>
+                </ol>
+            </nav>
+        </section>
         <!-- Our Story Section -->
         <section class="container-fluid d-flex justify-content-center">
             <h2 class="d-none">Our Story</h2>
