alt title logo, optimized images, center breadcrumbs mobile

--- a/diycamperconversion.html
+++ b/diycamperconversion.html
@@ -63,6 +63,7 @@
         </section>
         <!-- Breadcrumb-->
         <section class="container breadcrumb-container">
+            <h6 class="d-none">&nbsp;</h6>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="breadcrumb-link" href="index.html">Home</a></li>
