--- a/get-your-van-road-ready.html
+++ b/get-your-van-road-ready.html
@@ -63,6 +63,7 @@
         </section>
         <!-- Breadcrumb-->
         <section class="container breadcrumb-container">
+            <h6 class="d-none">&nbsp;</h6>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="breadcrumb-link" href="index.html">Home</a></li>
@@ -86,26 +87,30 @@
                     what needs to be done, and in what order.
                     <br><br>
                     The first thing to know is that to get your camper insured, it first must be registered as a motor
-                    caravan on the logbook. In the eyes of the Revenue, for a self converted van to be considered a
+                    caravan on the logbook. In the eyes of the Revenue, for a self-converted van to be considered a
                     motor
-                    caravan, it must have the following:
+                    caravan, it must have the following: </p>
                 <ul>
                     <li>Seating and a table</li>
                     <li>A bed (this can be converted from the seats)</li>
                     <li>Cooking facilities</li>
                     <li>Storage facilities</li>
                 </ul>
-                When it comes to cooking facilities and gas, the Revenue state that a Gas
-                Installer Certificate should be made available. In my experience, this is not the case. That said, when
-                installing gas, it is recommended that you use a registered gas installer. Having your gas installed by
-                an
-                RGI will give you peace of mind, and the certificate will be of benefit should you ever be selling your
-                camper in the future.
-                <br><br>
-                Below I have set out five key steps to getting your van on the road, one before you start your build and
-                four once you’ve completed your build. This article does not go into specifics on the build
-                itself. You can find information on how to convert your van <a href="diycamperconversion.html"
-                    class="bodylink">here</a>.
+                <p>When it comes to cooking facilities and gas, the Revenue state that a Gas
+                    Installer Certificate should be made available. In my experience, this is not the case. That said,
+                    when
+                    installing gas, it is recommended that you use a registered gas installer. Having your gas installed
+                    by
+                    an
+                    RGI will give you peace of mind, and the certificate will be of benefit should you ever be selling
+                    your
+                    camper in the future.
+                    <br><br>
+                    Below I have set out five key steps to getting your van on the road, one before you start your build
+                    and
+                    four once you’ve completed your build. This article does not go into specifics on the build
+                    itself. You can find information on how to convert your van <a href="diycamperconversion.html"
+                        class="bodylink">here</a>.
                 </p>
                 <br><br>
                 <h2 class="bp-heading">Pre Build</h2>
@@ -154,7 +159,7 @@
                 <br>
                 <h3 class="bp-heading">Step 4: Submit your documents to the Revenue.</h3>
                 <p>Good news, we are almost there! It is time to submit all of your documents to the Revenue. This
-                    includes:
+                    includes:</p>
                 <ul>
                     <li>Vehicle Registration Certificate</li>
                     <li>SQI - Declaration of conversion</li>
@@ -162,17 +167,18 @@
                     <li>Conversion photographs</li>
                     <li>Cover letter and conversion receipts</li>
                 </ul>
-                Your cover letter should briefly outline how you went about your conversion and the associated cost. I
-                have created a cover letter template that you can download <a href="#" class="bodylink">here</a>.
-                <br><br>
-                All of your documents should be posted to:
-                <br><br>
-                FREEPOST<br>
-                The Central Vehicle Office<br>
-                Revenue Commissioners<br>
-                Anne Street<br>
-                Co. Wexford<br>
-                Y35 E29K<br>
+                <p>Your cover letter should briefly outline how you went about your conversion and the associated cost.
+                    I
+                    have created a cover letter template that you can download <a href="#" class="bodylink">here</a>.
+                    <br><br>
+                    All of your documents should be posted to:
+                    <br><br>
+                    FREEPOST<br>
+                    The Central Vehicle Office<br>
+                    Revenue Commissioners<br>
+                    Anne Street<br>
+                    Co. Wexford<br>
+                    Y35 E29K<br>
                 </p>
                 <br>
                 <h3 class="bp-heading">An important note...</h3>
@@ -201,6 +207,7 @@
         </article>
         <!-- Read More Button -->
         <section class="container read-on d-flex justify-content-center">
+            <h6 class="d-none">&nbsp;</h6>
             <a href="diycamperconversion.html" class="btn btn-read-on">See more on DIY conversions <i
                     class="fas fa-arrow-circle-right"></i></a>
         </section>
