--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
         <nav class="navbar navbar-expand-lg bg-nav">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="index.html">&nbsp;</a>
+                <a class="navbar-brand logo" href="index.html"
+                    title="The Freedom Project | An Irish Vanlife Blog">&nbsp;</a>
                 <button class="toggle-nav d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -152,6 +153,7 @@
             <h2 class="col-12 emailsub-header">Subscribe for updates!</h2>
             <div class="row">
                 <div class="col-12">
+                    <!-- Email sub sourced from Mail Chimp (https://mailchimp.com/) -->
                     <form
                         action="https://gmail.us1.list-manage.com/subscribe/post?u=4be784f130875c2a4eee67c32&amp;id=632a602b72"
                         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
