--- a/ourstory.html
+++ b/ourstory.html
@@ -55,11 +55,12 @@
         </header>
         <!-- Breadcrumb-->
         <section class="container breadcrumb-container">
+            <h6 class="d-none">&nbsp;</h6>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="breadcrumb-link" href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="breadcrumb-link breadcrumb-live"
-                            href="ourstory.html">Our Story</a></li>
+                    <li class="breadcrumb-item"><a class="breadcrumb-link breadcrumb-live" href="ourstory.html">Our
+                            Story</a></li>
                 </ol>
             </nav>
         </section>
